# openframe-oss-tenant

./: pom.xml
.github/steps/helm-override/: action.yml
.github/workflows/: changes.yml  matrix.yml  release.yml  test.yml
clients/openframe-chat/: Makefile  package.json
clients/openframe-chat/src-tauri/: Cargo.toml  tauri.conf.json
clients/openframe-chat/src-tauri/icons/: icon.icns
clients/openframe-chat/src-tauri/src/: config_reader.rs  lib.rs  token_decryption_service.rs  token_watcher.rs
clients/openframe-chat/src/components/: NewTicketModal.tsx  (+2 more)
clients/openframe-client/: Cargo.toml  build.rs
clients/openframe-client/src/: lib.rs
configs/base/: openframe-api.yml  openframe-authorization-server.yml  openframe-external-api.yml  openframe-gateway.yml  openframe-management.yml  openframe-stream.yml  shared-logback-spring.xml
configs/dev/: openframe-gateway.yml
manifests/app-of-apps/: values.yaml
manifests/apps/: values.yaml
manifests/apps/templates/: _helpers.tpl
manifests/datasources/cassandra/: values.yaml
manifests/integrated-tools/fleet/: values.yaml
manifests/integrated-tools/redis-authentik/: Chart.yaml
manifests/integrated-tools/redis-fleet/: Chart.yaml  values.yaml
manifests/integrated-tools/redis-tactical/: values.yaml
manifests/microservices/openframe-frontend/: values.yaml
manifests/microservices/openframe-gateway/: values.yaml
manifests/microservices/openframe-management/: values.yaml
openframe/services/openframe-frontend/: .env.local  next.config.mjs  package-lock.json  package.json  schema.graphql  tailwind.config.ts
(+471 files in other folders)
