[package]
name = "openframe-chat"
version = "0.1.0"
description = "OpenFrame Chat Desktop Client"
authors = ["OpenFrame"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
aes-gcm = "0.10"
base64 = "0.21"
notify = "6.1"

[target.'cfg(windows)'.dependencies]
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }
